// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`openapi queries get operations 1`] = `
Array [
  Object {
    "jsonPath": "/paths/~1pet~1{petId}~1uploadImage/post",
    "method": "post",
    "path": "/pet/{petId}/uploadImage",
  },
  Object {
    "jsonPath": "/paths/~1store~1inventory/get",
    "method": "get",
    "path": "/store/inventory",
  },
  Object {
    "jsonPath": "/paths/~1store~1order/post",
    "method": "post",
    "path": "/store/order",
  },
  Object {
    "jsonPath": "/paths/~1store~1order~1{orderId}/get",
    "method": "get",
    "path": "/store/order/{orderId}",
  },
  Object {
    "jsonPath": "/paths/~1store~1order~1{orderId}/delete",
    "method": "delete",
    "path": "/store/order/{orderId}",
  },
  Object {
    "jsonPath": "/paths/~1user/post",
    "method": "post",
    "path": "/user",
  },
  Object {
    "jsonPath": "/paths/~1user~1createWithArray/post",
    "method": "post",
    "path": "/user/createWithArray",
  },
  Object {
    "jsonPath": "/paths/~1user~1createWithList/post",
    "method": "post",
    "path": "/user/createWithList",
  },
  Object {
    "jsonPath": "/paths/~1user~1login/get",
    "method": "get",
    "path": "/user/login",
  },
  Object {
    "jsonPath": "/paths/~1user~1logout/get",
    "method": "get",
    "path": "/user/logout",
  },
  Object {
    "jsonPath": "/paths/~1user~1{username}/get",
    "method": "get",
    "path": "/user/{username}",
  },
  Object {
    "jsonPath": "/paths/~1user~1{username}/put",
    "method": "put",
    "path": "/user/{username}",
  },
  Object {
    "jsonPath": "/paths/~1user~1{username}/delete",
    "method": "delete",
    "path": "/user/{username}",
  },
]
`;

exports[`openapi queries get paths 1`] = `
Array [
  Object {
    "jsonPath": "/paths/~1pet~1{petId}~1uploadImage/post",
    "method": "post",
    "path": "/pet/{petId}/uploadImage",
  },
  Object {
    "jsonPath": "/paths/~1store~1inventory/get",
    "method": "get",
    "path": "/store/inventory",
  },
  Object {
    "jsonPath": "/paths/~1store~1order/post",
    "method": "post",
    "path": "/store/order",
  },
  Object {
    "jsonPath": "/paths/~1store~1order~1{orderId}/get",
    "method": "get",
    "path": "/store/order/{orderId}",
  },
  Object {
    "jsonPath": "/paths/~1store~1order~1{orderId}/delete",
    "method": "delete",
    "path": "/store/order/{orderId}",
  },
  Object {
    "jsonPath": "/paths/~1user/post",
    "method": "post",
    "path": "/user",
  },
  Object {
    "jsonPath": "/paths/~1user~1createWithArray/post",
    "method": "post",
    "path": "/user/createWithArray",
  },
  Object {
    "jsonPath": "/paths/~1user~1createWithList/post",
    "method": "post",
    "path": "/user/createWithList",
  },
  Object {
    "jsonPath": "/paths/~1user~1login/get",
    "method": "get",
    "path": "/user/login",
  },
  Object {
    "jsonPath": "/paths/~1user~1logout/get",
    "method": "get",
    "path": "/user/logout",
  },
  Object {
    "jsonPath": "/paths/~1user~1{username}/get",
    "method": "get",
    "path": "/user/{username}",
  },
  Object {
    "jsonPath": "/paths/~1user~1{username}/put",
    "method": "put",
    "path": "/user/{username}",
  },
  Object {
    "jsonPath": "/paths/~1user~1{username}/delete",
    "method": "delete",
    "path": "/user/{username}",
  },
]
`;

exports[`openapi queries get query params 1`] = `
Array [
  Object {
    "jsonPath": "/paths/~1user~1{username}/parameters/0",
    "location": Object {
      "conceptualLocation": Object {
        "inRequest": Object {
          "query": "example-query-param",
        },
        "method": "get",
        "path": "/user/{username}",
      },
      "conceptualPath": Array [
        "operations",
        "/user/{}",
        "get",
        "parameters",
        "query",
        "example-query-param",
      ],
      "jsonPath": "/paths/~1user~1{username}/parameters/0",
      "kind": "query-parameter",
    },
    "name": "example-query-param",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`openapi queries get query params 2`] = `
Array [
  Object {
    "jsonPath": "/paths/~1user~1{username}/parameters/0",
    "location": Object {
      "conceptualLocation": Object {
        "inRequest": Object {
          "query": "example-query-param",
        },
        "method": "put",
        "path": "/user/{username}",
      },
      "conceptualPath": Array [
        "operations",
        "/user/{}",
        "put",
        "parameters",
        "query",
        "example-query-param",
      ],
      "jsonPath": "/paths/~1user~1{username}/parameters/0",
      "kind": "query-parameter",
    },
    "name": "example-query-param",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;
